--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ section.descricao p{
     display: inline-block;
     margin: 0 10px;
     text-align: center;
+    transition: background-color;
+    transition-duration: 250ms;
+}
+
+.icons-social a:hover{
+    background-color: #0896cf;
 }
 
 .icons-social i{
